--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,17 @@
 <resources>
     <string name="app_name">Trabalho1</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configurações</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="first_fragment_label">Primeiro Fragmento</string>
+    <string name="second_fragment_label">Segundo Fragmento</string>
+    <string name="third_fragment_label">Terceiro Fragento</string>
+    <string name="to_first_fragment">Primeiro</string>
+    <string name="to_second_fragment">Segundo</string>
+    <string name="to_third_fragment">Terceiro</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="hello_first_fragment">Primeiro Fragmento</string>
+    <string name="hello_second_fragment">Segundo Fragmento</string>
+    <string name="hello_third_fragment">Terceiro Fragmento</string>
+
 </resources>
